Hide all warnings

--- a/src/project/Makefile
+++ b/src/project/Makefile
@@ -19,10 +19,10 @@ parser.ml parser.mli : parser.mly
 	ocamlyacc parser.mly
 
 %.cmo : %.ml
-	ocamlc -w A -c $<
+	ocamlc -w -A -c $<
 
 %.cmi : %.mli
-	ocamlc -w A -c $<
+	ocamlc -w -A -c $<
 
 #calc.tar.gz : $(TARFILES)
 #	cd .. && tar czf calc/calc.tar.gz $(TARFILES:%=calc/%)
